deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codex-api
  namespace: prod-net-althingi-lagasafn
spec:
  replicas: 2
  selector:
    matchLabels:
      app: codex-api
  template:
    metadata:
      labels:
        app: codex-api
    spec:
      containers:
      - name: codex-api
        image: ghcr.io/althingi-net/codex-api:latest
        imagePullPolicy: Always
